Fixed BG on profile for visibility

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -256,6 +256,9 @@ code {
     float:right;
     margin-right: 20px;
 }
+.container-profile{
+    
+}
 
 .grad-content-bg{
     background-color: rgba(12,12,12,.9);
